# selenium_page_stubber

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test_requirements.txt  tox.ini
.github/workflows/: python-app.yml
src/selenium_page_stubber/: __init__.py  _version.py  cli.py
src/selenium_page_stubber/client/: lib.py
src/selenium_page_stubber/pages/: Page.py
tests/selenium_page_stubber/: test_cli.py
tests/selenium_page_stubber/client/: test_lib.py
